<resources>
    <string name="app_name">Android Programming</string>

    <!--*******************************************************************************************
    *
    * QUESTIONS APP
    *
    ********************************************************************************************-->
    <string name="geoquiz">GeoQuiz</string>

    <string name="question_text">Canberra is the capital of Australia.</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The Source of the Nile River is Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the World\'s oldest and deepest freshwater lake.</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">NEXT</string>
    <string name="previous_button">PREV</string>
    <string name="score">Your score is %1$.2f!</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong.</string>

    <string name="cheated_count">Cheated: %1$d times</string>
    <string name="cheats_remaining">Cheats Left: %1$d</string>

    <!--*******************************************************************************************
    *
    * Criminal Intent App
    *
    ********************************************************************************************-->
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>

</resources>