<?xml version="1.0" encoding="utf-8"?>

<!--************************************************************************************************
*
* Chapter 02 Main Activity Layout
*
*   This activity displays a text box and three buttons centered on the screen.
*
* Contents:
*
*   A Vertical LinearLayout is used as a the top-level component. Its contents are centered using
*   the android:gravity attribute. The tools namespace is added in order to make those attributes
*   available to child elements.
*
*   It contains a TextView and a Horizontal LinearLayout that holds two Buttons, followed by one
*   more button.
*
*   Padding is applied to the TextView to give space between it and its surroundings and its height
*   and width wrap its contents. The TextView is given an ID attribute. `tools:text` is used to
*   assign a value that will be shown when in Android Studio.
*
*   The Horizontal LinearLayout height and width is set to wrap contents. This ViewGroup wraps two
*   Button elements.
*
*       The Buttons each have an ID associated with them. Their height and width wrap their
*       contents. A string resource provides their text.
*
*  An additional Button is created below the Horizontal Layout. With and Height wrap content. A
*  string resource is provided.
*
*************************************************************************************************-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/root"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:text="@string/question_australia" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_arrow_left_24"
            app:iconGravity="start"
            android:text="@string/previous_button" />
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_arrow_right_24"
            app:iconGravity="end"
            android:text="@string/next_button" />

    </LinearLayout>
</LinearLayout>